Fix language selector on mobile

--- a/sources/scss/common.scss
+++ b/sources/scss/common.scss
@@ -283,6 +283,7 @@ a {
 		background-image: url("../images/test.jpg");
 		background-size: cover;
 		background-repeat: no-repeat;
+		background-position: center center;
 		overflow: hidden;
 		img {
 			display: block;
