--- a/sources/scss/header.scss
+++ b/sources/scss/header.scss
@@ -19,7 +19,10 @@
 			padding: 4px;
 			font-size: 20px;
 			text-transform: uppercase;
-			color: $white;		
+			color: $white;
+			@media screen and (max-width: $screen-xs-max) {
+				display: none;
+			}		
 		}
 		&-list {
 			position: absolute;
@@ -37,14 +40,27 @@
 			}
 		}
 		&-select {
+			display: none;
 			-webkit-appearance: none;
 			-moz-appearance: none;
 			border: 0;
-			background: transparent;
+			background-color: transparent;
 			outline: none;
 			text-transform: uppercase;
 			font-size: 26px;
 			color: $white;
+			option {
+				color: $primary; 
+				background-color: rgba(0,0,0, .8);
+				&:hover {
+					color: $white;
+					background-color: $primary;
+				}
+			}
+			@media screen and (max-width: $screen-xs-max) {
+				display: block;
+				font-size: 20px;
+			}
 		}
 		&:after {
 			content: '';
@@ -60,6 +76,9 @@
 		}
 		&:hover > .header__lang-list {
 			display: block;
+			@media screen and (max-width: $screen-xs-max) {
+				display: none;
+			}
 		}
 	}
 	&__nav {
